# CLIEngine

./: .gitignore  CMakeLists.txt  README.md
include/: CLIEngine_core.hpp  CLIEngine_screen.hpp
include/CLIEngine/: choices.hpp  core.hpp  dice.hpp
include/CLIEngine/assets/: logo.hpp  numbers.hpp  palette.hpp
include/CLIEngine/screens/: navigation_screen.hpp
include/CLIEngine/widgets/: choices.hpp  dice.hpp
src/: CLIEngine_core.cpp  CLIEngine_screen.cpp
src/CLIEngine/: choices.cpp  core.cpp  dice.cpp
src/CLIEngine/screens/: navigation_screen.cpp
src/samples/: choices_transition.cpp  colors.cpp  dice.cpp  hello_CLIEngine.cpp  screen_transition.cpp  sprite_CLIEngine.cpp  sprite_smile_face.cpp
src/samples/core/: colors.cpp  hello_CLIEngine.cpp  sprite_CLIEngine.cpp  sprite_smile_face.cpp
src/samples/screens/: navigation_screen.cpp
src/samples/widgets/: choices.cpp  combination_lock.cpp  dice.cpp
